--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <title>Game</title>
 </head>
 <body>
-        <div id="high-score">Score:
-            <div>
-            <div id="score"></div>
+        <div id="score">Score: <p>0</p>
             </div>
-        </div>
 
         <div id="layout" onclick="jump()">
             <div id="dog"><i class="fa-solid fa-dog"></i></div>
