added new animations and sound

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Game</title>
 </head>
 <body>
-        <div id="score">Score: <p>0</p>
+        <div id="score"><p>Score: 0</p>
             </div>
 
-        <div id="layout" onclick="jump()">
-            <div id="dog"><i class="fa-solid fa-dog"></i></div>
+        <div id="layout" onclick="jump(); jump_sound()">
+            <div id="dog"><i class="fa-solid fa-dog fa-bounce"></i></div>
             <div id="block"></div>
-<!--            <div id="block2"></div>-->
+            <!--            <div id="block2"></div>-->
         </div>
 
 
