Position the layout again and increase size

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <title>Game</title>
 </head>
 <body>
-        <div id="score"><p>Score: 0</p>
-            </div>
+        <div class="container" id="container">
+        <div id="score">
+            <p>Score: 0</p>
+        </div>
 
         <div id="layout" onclick="jump(); jump_sound()">
-            <div id="dog"><i class="fa-solid fa-dog fa-bounce"></i></div>
+            <div id="dog"><i class="fa-solid fa-dog fa-bounce fa-3x"></i></div>
             <div id="block"></div>
             <!--            <div id="block2"></div>-->
         </div>
-
+        </div>
 
     <script src="script.js" charset="UTF-8"></script>
 </body>
