Added Instruction Modal

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <p>Press anywhere on the game layout for the character to jump</p>
         <br>
         <br>
-        <p style="font-size: 20px; font-weight: bolder">That's All folks! Now Be a Champ!!</p>
+        <p style="font-size: 20px; font-weight: bolder">That's All folks! Now Go Be a Champ!!</p>
         <br>
         <button style="position: relative; left: 40%" class="button" id="closeIns"onclick="click_sound()">Close</button>
         </div>
