Added speed to ball

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="vol-btn" id="on"><i class="fa-solid fa-volume-off fa-4x"></i></div>
                 </div>
 
-                <input type="text" id="name" placeholder="Enter Your Name">
+                <input type="text" id="front_name" placeholder="Enter Your Name">
 
                 <div class="start">
                     <button type="button" id="button-instruction" class="button" onclick="click_sound()">Instruction</button>
@@ -134,7 +134,6 @@
             </div>
 
         </div>
-
     <script src="script.js" charset="UTF-8"></script>
 </body>
 </html>
