--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>Game</title>
+    <link rel="shortcut icon" type="image/jpg" href="https://static.vecteezy.com/system/resources/previews/005/895/704/non_2x/cute-shiba-inu-dog-running-and-wearing-scarf-cartoon-icon-illustration-animal-nature-icon-concept-isolated-premium-flat-cartoon-style-free-vector.jpg"/>
 </head>
 <body>
 <!-- High Score Modal-->
